Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

 o #16020 Bugfix & extension for administrative 'event/callbackState'
          It now fires on the initial login a "ALIVE" or "POLLING" event
	  The subjectId and/or the publicSessionId can now be a wildcard "*".
          See: http://www.xmlblaster.org/xmlBlaster/doc/requirements/admin.events.html

 o #15994 Added C and C++ project files for eclipse and VC++2005
          See xmlBlaster/src/c/README and xmlBlaster/src/c++/README
          See xmlBlaster/demo/socket/README and xmlBlaster/demo/c++/README

 o #15980 C++ client library: Partially added support for WINCE
          Porting to MSXML and fixing errno.h in omnithread is missing

 o #15967-#15972 Mac OSX c client library compilation patch

Changes for 1.5 [2007-01-28] #15961
===================================

 o #15953 C++ and Java client library now create client side subscriptionId if
          pubSessionId>0 and multiSubscribe=false (fail safe operation).
          Like this we avoid returning a temporary subscriptionId if a subscribe is queued
          on client side (during POLLING).

 o #15949 made volatile all variables which are used in a double checked locking idiom (should be 
          safe in new MEM Model as JDK 1.5) 

 o #15934 Fixed java client library for changing client side IP address
          Reconnect is now supported.
          Security fix which allowed hijacking the callback address

 o #15930 Dead letter is now not containing <oid>...</oid> anymore
          Is send already QoS

 o #15906 Switched off dynamically loadable plugins as a default setting.
          See http://www.xmlBlaster.org/xmlBlaster/doc/requirements/engine.runlevel.howto.html#dynamic
 
 o #15866 added the possibility to disable going to polling if a response timeout comes from a ping:
          use dispatch/callback/stallOnPingTimeout=true or/and dispatch/connection/stallOnPingTimeout=true.